# tcc-es-graduacao

./: .gitignore  README.md  app.py  pyproject.toml
scripts/: _evaluate_metrics.py  corpus_generation.py  evaluate_metrics.py  run_pipeline.py
src/configs/: __init__.py  generator.py  lexicons.py  models.py  paths.py
src/rpd_extractor/: __init__.py  nlp.py
